[package]
name = "rsgrad"
version = "0.4.15"
authors = ["Ionizing <PeterSmith_9@outlook.com>"]
edition = "2018"

[[bin]]
name = "rsgrad"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1"
regex = "1"
itertools = "0.10"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2"
log = "0.4"
env_logger = "0.8"
ndarray = "0.15"
#ndarray-npy = "0.8"
anyhow = "1.0"
flate2 = "1.0"
directories = "4.0"
serde = "1.0"
plotly = { git = "https://github.com/Ionizing/plotly", rev = "25c41e39a8290f28429a7767404270ac91914110", features = ["plotly_ndarray"] }
toml = "0.8"
indexmap = { version = "1.8", features = ["serde"] }
rand = "0.8"
byteorder = "1.4"
ndrustfft = "0.4.2"
paste = "1.0"
memchr = "2.6.4"
enum_dispatch = "0.3.12"
#hdf5 = "0.8.1"
#hdf5-sys = { version = "0.8.1", features = ["static"] }
hdf5 = { git = "https://github.com/CramBL/hdf5-rust", rev = "1b53164290abc4250abd59b98e8fa78901078632" }
hdf5-sys = { git = "https://github.com/CramBL/hdf5-rust", rev = "1b53164290abc4250abd59b98e8fa78901078632", features = ["static"] }
figment = { version = "0.10.19", features = ["toml"] }
cauchy = "0.4.0"

[dev-dependencies]
tempdir = "0.3"


[profile.release]
incremental = true
#lto = true
opt-level = 3
